Gray-Space/src/objects/GS_Cart_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>GS_Org_Wide_Email_Id__c</fullName>
        <label>Org Wide Email Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Quote_Email_Template_Id__c</fullName>
        <label>Quote Email Template Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Quote_File_Name__c</fullName>
        <label>Quote File Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Cart Settings</label>
</CustomObject>